--- a/Debugged_CybORG/CybORG/requirements.txt
+++ b/Debugged_CybORG/CybORG/requirements.txt
@@ -23,14 +23,14 @@ google-pasta==0.2.0
 grpcio==1.64.1
 gym==0.26.2
 gym-notices==0.0.8
-gymnasium==0.29.1
+gymnasium==1.0.0
 h5py==3.11.0
 idna==3.7
 importlib_metadata==8.0.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
 Jinja2==3.1.4
-keras==2.13.1
+keras>=3.0.0
 kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
@@ -65,21 +65,21 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rsa==4.9
 six==1.16.0
-stable_baselines3==2.3.2
+stable_baselines3==2.4.0
 sympy==1.13.0
-tensorboard==2.13.0
+tensorboard>=2.15.0
 tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-macos==2.13.0
+tensorflow>=2.15.0
+tensorflow-estimator>=2.15.0
+tensorflow-macos>=2.15.0
 termcolor==2.4.0
 tomli==2.0.1
 torch==2.3.1
 tqdm==4.66.4
-typing_extensions==4.5.0
+typing_extensions>=4.3.0
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
 Werkzeug==3.0.3
-wrapt==1.16.0
+wrapt==1.14.0
 zipp==3.19.2
